--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Weather Scene Generator</title>
+    <title>Artistic Generator</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,26 +11,22 @@
     <script src="./base.js" defer></script>
   </head>
   <body>
-    <select id="scene"></select>
-    <select id="weather"></select>
-    <select id="time"></select>
+    Scene
+    <select id="scene"></select><br/>
+    Weather
+    <select id="weather"></select><br/>
+    Time
+    <select id="time"></select><br/>
     <button id="confirmButton">
       Confirm
     </button>
-    <!-- <p>
-      Mutation rate (<span id="rate"></span>%):<br /><input
-        id="slider"
-        type="range"
-        min="1"
-        max="100"
-        value="100"
-      />
+    <p>
     </p>
     <p id="active"></p>
-    <p>Active score: <span id="activeScore"></span></p>
-    <p>Exploration rate: <span id="fpsCounter"></span> fps</p>
+    <p><span id="activeScore"></span></p>
+    <p><span id="fpsCounter"></span></p>
     <p id="best"></p>
-    <p>Best score: <span id="bestScore"></span></p>
-    <p id="memory" data-max-items="16"></p> -->
+    <p><span id="bestScore"></span></p>
+    <p id="memory" data-max-items="16"></p>
   </body>
 </html>
