--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Artistic Generator</title>
+    <title>Weather Scene Generator</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,11 +12,11 @@
   </head>
   <body>
     Scene
-    <select id="scene"></select><br/>
+    <select id="scene"></select><br/><br/>
     Weather
-    <select id="weather"></select><br/>
+    <select id="weather"></select><br/><br/>
     Time
-    <select id="time"></select><br/>
+    <select id="time"></select><br/><br/>
     <button id="confirmButton">
       Confirm
     </button>
