--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <script src="./base.js" defer></script>
   </head>
   <body>
-    Scene
-    <select id="scene"></select><br/><br/>
-    Weather
-    <select id="weather"></select><br/><br/>
-    Time
-    <select id="time"></select><br/><br/>
-    <button id="confirmButton">
+    Scene:
+    <select id="scene"></select>
+    <button id="confirmScene">
       Confirm
-    </button>
+    </button><br/><br/>
+    Time:
+    <select id="time"></select>
+    <button id="confirmTime">
+      Confirm
+    </button><br/><br/>
+    Weather:
+    <select id="weather"></select>
+    <button id="confirmWeather">
+      Confirm
+    </button><br/><br/>
     <p>
     </p>
     <p id="active"></p>
