--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
     Scene:
     <select id="scene"></select>
-    <button id="confirmScene">
+    <!-- <button id="confirmScene">
       Confirm
-    </button><br/><br/>
-    Time:
+    </button><br/><br/> -->
+    &nbsp;&nbsp;Time:
     <select id="time"></select>
-    <button id="confirmTime">
+    <!-- <button id="confirmTime">
       Confirm
-    </button><br/><br/>
-    Weather:
-    <select id="weather"></select>
-    <button id="confirmWeather">
+    </button><br/><br/> -->
+    &nbsp;&nbsp;Weather:
+    <select id="weather"></select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button id="confirmButton">
       Confirm
     </button><br/><br/>
     <p>
