use online image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
     <script src="./script.js" defer></script>
     <script src="./base.js" defer></script>
   </head>
@@ -26,6 +26,12 @@
     <button id="confirmButton">
       Confirm
     </button><br/><br/>
+    Use Your Image to Test: 
+    <input type="link" id="imageLink" placeholder="Link">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button id="submitButton">
+      Submit
+    </button><br/><br/>
+
     <p>
     </p>
     <p id="active"></p>
