add sign of life (sun/moon)

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <button id="confirmButton">
       Confirm
     </button><br/><br/>
-    Use Your Image to Test: 
+    <!-- Use Your Image to Test: 
     <input type="link" id="imageLink" placeholder="Link">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button id="submitButton">
       Submit
-    </button><br/><br/>
+    </button><br/><br/> -->
 
     <p>
     </p>
