--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
     <script src="./weather.js" defer></script>
-    <script src="./script.js" defer></script>
+    <script src="./scene-and-time.js" defer></script>
     <script src="./base.js" defer></script>
   </head>
   <body>
