--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
+    <script src="./options.js" defer></script>
     <script src="./weather.js" defer></script>
     <script src="./scene-and-time.js" defer></script>
     <script src="./base.js" defer></script>
