--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <p>
     </p>
-    <p id="active"></p>
-    <p><span id="activeScore"></span></p>
-    <p><span id="fpsCounter"></span></p>
+    <!-- <p id="active"></p> -->
+    <!-- <p><span id="activeScore"></span></p>
+    <p><span id="fpsCounter"></span></p>-->
     <p id="best"></p>
-    <p><span id="bestScore"></span></p>
-    <p id="memory" data-max-items="16"></p>
+    <!-- <p><span id="bestScore"></span></p>
+    <p id="memory" data-max-items="16"></p> --> 
   </body>
 </html>
