add checkbox for the showup of sun/moon

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
       Confirm
     </button><br/><br/> -->
     &nbsp;&nbsp;Weather:
-    <select id="weather"></select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <select id="weather"></select>
+    &nbsp;&nbsp;Sun / Moon:
+    <input type="checkbox" id="checkbox"></input>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button id="confirmButton">
       Confirm
     </button><br/><br/>
+    <p>Sun / Moon only works when Time is not None.</p>
+
+    <br/>
     <!-- Use Your Image to Test: 
     <input type="link" id="imageLink" placeholder="Link">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button id="submitButton">
